k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: almachess
  labels:
    app.kubernetes.io/part-of: almachess
